# if-change-then-change

./: Cargo.toml  no-deps-cargo.toml
src/: diagnostic.rs  if_change_then_change.rs  if_change_then_change2.rs  main.rs
tests/: framework.rs  if_change_then_change_test.rs
tests/data/: basic-a.before.sh  basic-b.before.sh  basic-both-changed.diff  basic-one-changed.diff
tests/data/2-files/: a.sh  b.sh  both-changed-both-added-lines-in-if-change.diff  both-changed-both-removed-lines-in-if-change.diff  both-changed-one-in-if-change.diff  one-changed-in-if-change.diff
tests/data/3-files/: build.sh  change.diff  push.sh  release.sh
tests/data/3-files-chain/: build.sh  change.diff  push.sh
tests/data/3-files-incomplete/: build.sh  change.diff  push.sh  release.sh
tests/data/5-files/: build.sh  change.diff  push.sh  release-prod.sh  release-staging.sh  release-stress.sh
tests/data/basic/: a.sh  b.sh  both-changed-both-added-lines-in-if-change.diff  both-changed-both-removed-lines-in-if-change.diff  both-changed-one-in-if-change.diff  both-changed-one-missing-if-change.diff  c.sh  one-changed-in-if-change.diff  one-changed-other-missing-if-change.diff  post-diff-path-is-dev-null.diff  rename.diff  then-change-references-nonexistent-file.diff  z.sh
tests/data/diff-has-path-changes/: deleted-file.diff  e-new-file.diff  e1.sh  e2.sh  f1.sh  g-renamed-file-no-changes.diff  g-renamed-file-with-changes.diff  g1.sh  g3.sh  g4.sh  h-copied-file-with-changes.diff  h-copied-file.diff  h1.sh  h2.sh  h2b.sh  h2c.sh
tests/data/file-with-2-blocks/: a-and-b1.diff  a.diff  a.sh  (+4 more)
(+26 files in other folders)
