[package]
name = "to-be-named"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
env_logger = "0.11.1"
log = "0.4.20"
unidiff = "0.3.3"

[dev-dependencies]
assert_cmd = "2.0"
pretty_assertions = "1.4.0"
